--- a/package.xml
+++ b/package.xml
@@ -41,6 +41,7 @@
   <exec_depend>cv_bridge</exec_depend>
   <exec_depend>rclcpp</exec_depend>
   <exec_depend>sensor_msgs</exec_depend>
+  <exec_depend>image_proc</exec_depend>
   <exec_depend>std_msgs</exec_depend>
 
 
