--- a/package.xml
+++ b/package.xml
@@ -44,6 +44,8 @@
   <exec_depend>image_proc</exec_depend>
   <exec_depend>std_msgs</exec_depend>
 
+  <depend>messages_88</depend>
+
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
